Bug 80541 - [softpipe] piglit levelclamp regression
Summary: [softpipe] piglit levelclamp regression
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-06-25 23:08 UTC by Vinson Lee
Modified: 2014-06-26 14:58 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2014-06-25 23:08:22 UTC
mesa: 9a8acafa47558cafeb37f80f4b30061ac1962c69 (master 10.3.0-devel)

$ ./bin/levelclamp  -auto
Probe color at (47,97)
  Expected: 1.000000 0.000000 1.000000
  Observed: 0.000000 1.000000 1.000000
failed at level 5 (1x1) with level clamped to (0,4)
Probe color at (84,90)
  Expected: 1.000000 1.000000 0.000000
  Observed: 1.000000 0.000000 1.000000
failed at level 4 (2x2) with level clamped to (0,3)
Probe color at (122,82)
  Expected: 0.000000 0.000000 1.000000
  Observed: 1.000000 1.000000 0.000000
failed at level 3 (4x4) with level clamped to (0,2)
Probe color at (160,70)
  Expected: 0.000000 1.000000 0.000000
  Observed: 0.000000 0.000000 1.000000
failed at level 2 (8x8) with level clamped to (0,1)
Probe color at (199,51)
  Expected: 1.000000 0.000000 0.000000
  Observed: 0.000000 1.000000 0.000000
failed at level 1 (16x16) with level clamped to (0,0)
Probe color at (47,196)
  Expected: 1.000000 0.000000 1.000000
  Observed: 0.000000 1.000000 1.000000
failed at level 5 (1x1) with level clamped to (1,4)
Probe color at (84,189)
  Expected: 1.000000 1.000000 0.000000
  Observed: 1.000000 0.000000 1.000000
failed at level 4 (2x2) with level clamped to (1,3)
Probe color at (122,181)
  Expected: 0.000000 0.000000 1.000000
  Observed: 1.000000 1.000000 0.000000
failed at level 3 (4x4) with level clamped to (1,2)
Probe color at (160,169)
  Expected: 0.000000 1.000000 0.000000
  Observed: 0.000000 0.000000 1.000000
failed at level 2 (8x8) with level clamped to (1,1)
Probe color at (47,295)
  Expected: 1.000000 0.000000 1.000000
  Observed: 0.000000 1.000000 1.000000
failed at level 5 (1x1) with level clamped to (2,4)
Probe color at (84,288)
  Expected: 1.000000 1.000000 0.000000
  Observed: 1.000000 0.000000 1.000000
failed at level 4 (2x2) with level clamped to (2,3)
Probe color at (122,280)
  Expected: 0.000000 0.000000 1.000000
  Observed: 1.000000 1.000000 0.000000
failed at level 3 (4x4) with level clamped to (2,2)
Probe color at (47,394)
  Expected: 1.000000 0.000000 1.000000
  Observed: 0.000000 1.000000 1.000000
failed at level 5 (1x1) with level clamped to (3,4)
Probe color at (84,387)
  Expected: 1.000000 1.000000 0.000000
  Observed: 1.000000 0.000000 1.000000
failed at level 4 (2x2) with level clamped to (3,3)
Probe color at (47,493)
  Expected: 1.000000 0.000000 1.000000
  Observed: 0.000000 1.000000 1.000000
failed at level 5 (1x1) with level clamped to (4,4)
PIGLIT: {'result': 'fail' }


552c70a837b68124a8cd85873d45075fa17659f4 is the first bad commit
commit 552c70a837b68124a8cd85873d45075fa17659f4
Author: Marek Olšák <marek.olsak@amd.com>
Date:   Sat Jun 14 02:49:11 2014 +0200

    st/mesa: set sampler_view::last_level correctly
    
    It was set to pipe_resource::last_level and _MaxLevel was embedded in max_lod,
    that's why it worked for ordinary texturing. However, min_lod doesn't have
    any effect on texelFetch and textureQueryLevels, so we must still set
    last_level correctly.
    
    Reviewed-by: Roland Scheidegger <sroland@vmware.com>

:040000 040000 4d60394351de37e9def071183748f5da546f442e a4b40b20163caeedbd41b196e0fce9ddd942adb1 M	src
bisect run success
Comment 1 Roland Scheidegger 2014-06-26 14:58:40 UTC
Fixed by b1c1c7d31b3ad625243616597028e7d599eb8190.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.